--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@sveltejs/adapter-auto": "^3.0.0",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
+    "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "0.5.10",
     "@types/node": "20.11.20",
     "autoprefixer": "10.4.17",
