--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "type": "module",
   "dependencies": {
     "@vincjo/datatables": "^1.14.9",
-    "bsm.js": "^0.1"
+    "bsm.js": "^0.1",
+    "svelte-persisted-store": "^0.11.0"
   }
 }
