feat!: add data loading for player profile
new env: SKYLARKS_API_AUTH_HEADER, needs to be added to CI/CD

--- a/.env.dist
+++ b/.env.dist
@@ -3,3 +3,4 @@ PUBLIC_BACKEND_URL="http://skylarks-hp.ddev.site"
 PUBLIC_CLUB_ID=485
 PUBLIC_TEAM_NAME=Skylarks
 BSM_API_KEY=KEY
+SKYLARKS_API_AUTH_HEADER=HEADER
