--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -3,6 +3,9 @@ name: Deploy to Production Server
 on:
   workflow_dispatch:
   push:
+    paths-ignore:
+      - '**/README.md'
+      - 'docs/**'
     branches:
       - main
 
