--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "@vincjo/datatables": "^1.14.9",
     "bsm.js": "^0.1",
+    "pocketbase": "^0.21.4",
     "svelte-persisted-store": "^0.11.0"
   }
 }
