--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "autoprefixer": "10.4.17",
     "flowbite-svelte-icons": "^1.6.1",
     "postcss": "8.4.35",
-    "svelte": "^4.2.7",
+    "svelte": "^5.0.0-next.201",
     "svelte-check": "^3.6.0",
     "tailwindcss": "3.4.1",
     "tslib": "^2.4.1",
