build/ci: introduce env var for auth functionality

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -21,6 +21,8 @@ jobs:
       PUBLIC_BACKEND_URL: ${{ vars.PUBLIC_BACKEND_URL }}
       PUBLIC_CLUB_ID: ${{ vars.PUBLIC_CLUB_ID }}
       PUBLIC_TEAM_NAME: ${{ vars.PUBLIC_TEAM_NAME }}
+      PUBLIC_POCKETBASE_URL: ${{ vars.PUBLIC_POCKETBASE_URL }}
+      PUBLIC_AUTH_FUNCS_ENABLED: ${{ vars.PUBLIC_AUTH_FUNCS_ENABLED }}
       BSM_API_KEY: ${{ secrets.BSM_API_KEY }}
       SKYLARKS_API_AUTH_HEADER: ${{ secrets.SKYLARKS_API_AUTH_HEADER }}
 
