--- a/.env.dist
+++ b/.env.dist
@@ -3,5 +3,7 @@ PUBLIC_BACKEND_URL="http://skylarks-hp.ddev.site"
 PUBLIC_POCKETBASE_URL="http://localhost:8090"
 PUBLIC_CLUB_ID=485
 PUBLIC_TEAM_NAME=Skylarks
+PUBLIC_AUTH_FUNCS_ENABLED="true"
+
 BSM_API_KEY=KEY
 SKYLARKS_API_AUTH_HEADER=HEADER
