--- a/package.json
+++ b/package.json
@@ -36,5 +36,13 @@
     "pocketbase": "^0.21.4",
     "svelte-persisted-store": "^0.11.0",
     "typed-pocketbase": "^0.1.1"
+  },
+  "overrides": {
+    "@skeletonlabs/skeleton": {
+      "svelte": "$svelte"
+    },
+    "flowbite-svelte-icons": {
+      "svelte": "$svelte"
+    }
   }
 }
