--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@skeletonlabs/tw-plugin": "0.3.1",
     "@sveltejs/adapter-node": "^5.2.0",
     "@sveltejs/kit": "^2.0.0",
-    "@sveltejs/vite-plugin-svelte": "^3.0.0",
+    "@sveltejs/vite-plugin-svelte": "^4.0.0-next.6",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "0.5.10",
     "@types/node": "20.11.20",
