feat(FE): add Footer decoration, bump icon lib

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@tailwindcss/typography": "0.5.10",
     "@types/node": "20.11.20",
     "autoprefixer": "10.4.17",
-    "flowbite-svelte-icons": "^1.6.1",
+    "flowbite-svelte-icons": "^2.0.0-next.16",
     "postcss": "8.4.35",
     "svelte": "^5.0.0-next.201",
     "svelte-check": "^3.6.0",
@@ -39,9 +39,6 @@
   },
   "overrides": {
     "@skeletonlabs/skeleton": {
-      "svelte": "$svelte"
-    },
-    "flowbite-svelte-icons": {
       "svelte": "$svelte"
     }
   }
