chore(FE): update deps

--- a/package.json
+++ b/package.json
@@ -40,6 +40,9 @@
   "overrides": {
     "@skeletonlabs/skeleton": {
       "svelte": "$svelte"
+    },
+    "flowbite-svelte-icons": {
+      "svelte": "$svelte"
     }
   }
 }
