ci: disable automatic deployments
for now

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -2,12 +2,12 @@ name: Deploy to Production Server
 
 on:
   workflow_dispatch:
-  push:
-    paths-ignore:
-      - '**/README.md'
-      - 'docs/**'
-    branches:
-      - main
+  #push:
+    #paths-ignore:
+    #  - '**/README.md'
+    #  - 'docs/**'
+    #branches:
+    #  - main
 
 jobs:
   deploy:
