--- a/.env.dist
+++ b/.env.dist
@@ -1,6 +1,6 @@
 # DDEV has some issues with HTTPS and certificate verification, so for Development HTTP is fine
 PUBLIC_BACKEND_URL="http://skylarks-hp.ddev.site"
-PUBLIC_POCKETBASE_URL="http://localhost:8090"
+PUBLIC_POCKETBASE_URL="http://127.0.0.1:8090"
 PUBLIC_CLUB_ID=485
 PUBLIC_TEAM_NAME=Skylarks
 PUBLIC_AUTH_FUNCS_ENABLED="true"
