--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
     "@skeletonlabs/tw-plugin": "0.3.1",
     "@sveltejs/adapter-node": "^5.2.0",
     "@sveltejs/kit": "^2.5.27",
-    "@sveltejs/vite-plugin-svelte": "^4.0.0-next.6",
+    "@sveltejs/vite-plugin-svelte": "^4.0.0",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "0.5.10",
     "@types/node": "20.11.20",
     "autoprefixer": "10.4.17",
     "flowbite-svelte-icons": "^2.0.0-next.16",
     "postcss": "8.4.35",
-    "svelte": "^5.0.0-next.201",
+    "svelte": "^5.0.0",
     "svelte-check": "^4.0.0",
     "tailwindcss": "3.4.1",
     "tslib": "^2.4.1",
