chore: add script to generate "Sign in with Apple" secret
the real benefit is the things I learned on the way (scripts work in project dir with installed packages available)

--- a/.env.dist
+++ b/.env.dist
@@ -7,3 +7,14 @@ PUBLIC_AUTH_FUNCS_ENABLED="true"
 
 BSM_API_KEY=KEY
 SKYLARKS_API_AUTH_HEADER=HEADER
+
+# Admin email and password for PocketBase authentication
+ADMIN_EMAIL=test@example.com
+ADMIN_PASSWORD=$uper$ecret
+
+# Apple Client Secret configuration values
+APPLE_CLIENT_ID=
+APPLE_TEAM_ID=
+APPLE_KEY_ID=
+APPLE_PRIVATE_KEY=
+APPLE_KEY_DURATION=15777000
