--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tailwindcss/typography": "0.5.10",
     "@types/node": "20.11.20",
     "autoprefixer": "10.4.17",
+    "dotenv": "^16.4.5",
     "flowbite-svelte-icons": "^2.0.2",
     "postcss": "8.4.35",
     "svelte": "^5.0.0",
