fix: propagate request after hook properly

--- a/.env.dist
+++ b/.env.dist
@@ -4,6 +4,7 @@ PUBLIC_POCKETBASE_URL="http://127.0.0.1:8090"
 PUBLIC_CLUB_ID=485
 PUBLIC_TEAM_NAME=Skylarks
 PUBLIC_AUTH_FUNCS_ENABLED="true"
+PUBLIC_LOG_LEVEL=ERROR
 
 BSM_API_KEY=KEY
 SKYLARKS_API_AUTH_HEADER=HEADER
