--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,7 @@ services:
       - "PUBLIC_AUTH_FUNCS_ENABLED=${PUBLIC_AUTH_FUNCS_ENABLED}"
       - "BSM_API_KEY=${BSM_API_KEY}"
       - "SKYLARKS_API_AUTH_HEADER=${SKYLARKS_API_AUTH_HEADER}"
+      - "PUBLIC_LOG_LEVEL=${PUBLIC_LOG_LEVEL}"
 
 networks:
   proxy:
