--- a/.gitignore
+++ b/.gitignore
@@ -219,3 +219,4 @@ vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
 .idea
 *private.env.json
+/backend/go_build_github_com_tib_baseball_softball_skylarks_next
