dev: add HTTP files for BSM stats

--- a/craft/http/http-client.private.env.json.example
+++ b/craft/http/http-client.private.env.json.example
@@ -2,6 +2,7 @@
   "dev": {
     "userPassword": "",
     "validSignupKey": "",
-    "adminToken": ""
+    "adminToken": "",
+    "bsmAPIKey": ""
   }
 }
