feat: add BSM request caching logic
BSM responses can be cached and saved to the database. Used for League Leaderboards.

 The endpoint/hook to cache generic requests still needs to be done.

--- a/backend/.env.dist
+++ b/backend/.env.dist
@@ -1,3 +1,4 @@
 SKYLARKS_API_AUTH_HEADER="HEADER"
 BSM_API_URL="https://bsm.baseball-softball.de"
+BSM_API_HOST="bsm.baseball-softball.de"
 APPLICATION_CONTEXT="Development"
