--- a/package.json
+++ b/package.json
@@ -38,5 +38,10 @@
     "pocketbase": "^0.22.0",
     "svelte-persisted-store": "^0.12.0",
     "typed-pocketbase": "^0.1.1"
+  },
+  "overrides": {
+    "typed-pocketbase": {
+      "pocketbase": "$pocketbase"
+    }
   }
 }
