chore: regenerate types for new PB version

--- a/.env.dist
+++ b/.env.dist
@@ -10,8 +10,8 @@ BSM_API_KEY=KEY
 SKYLARKS_API_AUTH_HEADER=HEADER
 
 # Admin email and password for PocketBase authentication
-ADMIN_EMAIL=test@example.com
-ADMIN_PASSWORD=$uper$ecret
+POCKETBASE_EMAIL=test@example.com
+POCKETBASE_PASSWORD=$uper$ecret
 
 # Apple Client Secret configuration values
 APPLE_CLIENT_ID=
