--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "vite build",
     "preview": "vite preview",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+    "generate:types": "typed-pocketbase -d src/lib/model"
   },
   "devDependencies": {
     "@skeletonlabs/skeleton": "2.10.3",
@@ -17,6 +18,7 @@
     "@sveltejs/vite-plugin-svelte": "^5.0.1",
     "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/typography": "0.5.15",
+    "@tigawanna/typed-pocketbase": "^0.0.3",
     "@types/node": "22.10.1",
     "autoprefixer": "10.4.20",
     "dotenv": "^16.4.7",
@@ -36,8 +38,7 @@
     "bsm.js": "^0.1",
     "flatpickr": "^4.6.13",
     "pocketbase": "^0.22.1",
-    "svelte-persisted-store": "^0.12.0",
-    "typed-pocketbase": "^0.1.1"
+    "svelte-persisted-store": "^0.12.0"
   },
   "overrides": {
     "typed-pocketbase": {
