dev: prepare request file for event series debugging

--- a/craft/http/http-client.private.env.json.example
+++ b/craft/http/http-client.private.env.json.example
@@ -3,6 +3,7 @@
     "userPassword": "",
     "validSignupKey": "",
     "adminToken": "",
-    "bsmAPIKey": ""
+    "bsmAPIKey": "",
+    "teamID": ""
   }
 }
