--- a/package.json
+++ b/package.json
@@ -11,25 +11,25 @@
     "generate:types": "typed-pocketbase -d src/lib/model"
   },
   "devDependencies": {
+    "@dotenvx/dotenvx": "^1.32.0",
     "@skeletonlabs/skeleton": "2.10.3",
     "@skeletonlabs/tw-plugin": "0.4.0",
-    "@sveltejs/adapter-node": "^5.2.9",
-    "@sveltejs/kit": "^2.9.0",
-    "@sveltejs/vite-plugin-svelte": "^5.0.1",
+    "@sveltejs/adapter-node": "^5.2.11",
+    "@sveltejs/kit": "^2.15.1",
+    "@sveltejs/vite-plugin-svelte": "^5.0.3",
     "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/typography": "0.5.15",
-    "@tigawanna/typed-pocketbase": "^0.0.3",
-    "@types/node": "22.10.1",
+    "@tigawanna/typed-pocketbase": "^0.0.5",
+    "@types/node": "22.10.5",
     "autoprefixer": "10.4.20",
-    "dotenv": "^16.4.7",
     "flowbite-svelte-icons": "^2.0.2",
     "postcss": "8.4.49",
-    "svelte": "^5.8.1",
+    "svelte": "^5.16.1",
     "svelte-check": "^4.1.1",
-    "tailwindcss": "3.4.16",
+    "tailwindcss": "3.4.17",
     "tslib": "^2.8.1",
     "typescript": "^5.7.2",
-    "vite": "^6.0.3",
+    "vite": "^6.0.7",
     "vite-plugin-tailwind-purgecss": "0.3.5"
   },
   "type": "module",
@@ -37,7 +37,7 @@
     "@vincjo/datatables": "^1.14.9",
     "bsm.js": "^0.1",
     "flatpickr": "^4.6.13",
-    "pocketbase": "^0.22.1",
+    "pocketbase": "^0.25.0",
     "svelte-persisted-store": "^0.12.0"
   },
   "overrides": {
