--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "vite dev",
     "build": "vite build",
     "preview": "vite preview",
+    "test": "vitest",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "generate:types": "typed-pocketbase -d src/lib/model"
@@ -30,7 +31,8 @@
     "tslib": "^2.8.1",
     "typescript": "^5.7.2",
     "vite": "^6.0.7",
-    "vite-plugin-tailwind-purgecss": "0.3.5"
+    "vite-plugin-tailwind-purgecss": "0.3.5",
+    "vitest": "^2.1.8"
   },
   "type": "module",
   "dependencies": {
