--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "tslib": "^2.8.1",
     "typescript": "^5.7.3",
     "vite": "^6.0.11",
+    "lucide-svelte": "^0.474.0",
     "vite-plugin-tailwind-purgecss": "0.3.5",
     "vitest": "^3.0.4"
   },
