--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,7 +3,7 @@ WORKDIR /app
 COPY go.mod go.sum ./
 RUN go mod download
 COPY . .
-RUN go build -o pocketbase
+RUN CGO_ENABLED=0 GOOS=linux go build -o pocketbase
 
 FROM ubuntu:latest
 WORKDIR /app
