--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,23 @@
 services:
+  backend:
+    image: obnoxieux/skylarks-next-backend:latest
+    restart: unless-stopped
+    environment:
+      SKYLARKS_API_AUTH_HEADER: ${SKYLARKS_API_AUTH_HEADER}
+      BSM_API_URL: ${BSM_API_URL}
+      BSM_API_HOST: ${BSM_API_HOST}
+      APPLICATION_CONTEXT: ${APPLICATION_CONTEXT}
+    networks:
+      - proxy
+    volumes:
+      - pb_data:/app/pb_data
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.facts.rule=Host(`pb.berlinskylarks.de`)"
+      - "traefik.http.routers.facts.entrypoints=websecure"
+      - "traefik.http.routers.facts.tls.certresolver=letsEncrypt"
+      - "traefik.docker.network=proxy"
+
   frontend:
     image: obnoxieux/skylarks-next:latest
     restart: unless-stopped
@@ -24,3 +43,6 @@ services:
 networks:
   proxy:
     external: true
+
+volumes:
+  pb_data:
