build: bind to all interfaces

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -11,4 +11,4 @@ COPY --from=builder /app/pocketbase ./
 
 EXPOSE 8090
 
-CMD ["./pocketbase", "serve"]
+CMD ["./pocketbase", "serve", "--http=0.0.0.0:8090"]
