--- a/.github/workflows/deploy_docker.yaml
+++ b/.github/workflows/deploy_docker.yaml
@@ -24,9 +24,11 @@ jobs:
           username: ${{ vars.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
 
-      - name: Build and push Docker image
+      - name: Build and push Docker images
         run: |
+          docker build -f /backend/Dockerfile -t ${{ vars.DOCKER_PB_IMAGE }}
           docker build -t ${{ vars.DOCKER_IMAGE }} .
+          docker push ${{ vars.DOCKER_PB_IMAGE }}
           docker push ${{ vars.DOCKER_IMAGE }}
 
       - name: Trigger Portainer deployment
