--- a/.env.dist
+++ b/.env.dist
@@ -5,6 +5,7 @@ PUBLIC_CLUB_ID=485
 PUBLIC_TEAM_NAME=Skylarks
 PUBLIC_AUTH_FUNCS_ENABLED="true"
 PUBLIC_LOG_LEVEL=ERROR
+PUBLIC_APPLICATION_CONTEXT="Development"
 
 BSM_API_KEY=KEY
 SKYLARKS_API_AUTH_HEADER=HEADER
