--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "generate:types": "typed-pocketbase -d src/lib/model"
   },
   "devDependencies": {
-    "@dotenvx/dotenvx": "^1.36.0",
+    "@dotenvx/dotenvx": "^1.37.0",
     "@skeletonlabs/skeleton": "2.10.4",
     "@skeletonlabs/tw-plugin": "0.4.0",
     "@sveltejs/adapter-node": "^5.2.12",
@@ -37,7 +37,7 @@
   "type": "module",
   "dependencies": {
     "@vincjo/datatables": "^1.14.10",
-    "bits-ui": "1.0.0-next.78",
+    "bits-ui": "^1.3.2",
     "bsm.js": "^0.1.12",
     "flatpickr": "^4.6.13",
     "pocketbase": "^0.25.1",
