--- a/package.json
+++ b/package.json
@@ -25,11 +25,15 @@
     "@tigawanna/typed-pocketbase": "^0.0.5",
     "@types/node": "22.10.10",
     "autoprefixer": "10.4.20",
+    "clsx": "^2.1.1",
     "lucide-svelte": "^0.474.0",
     "postcss": "8.5.1",
     "svelte": "^5.22.5",
     "svelte-check": "^4.1.5",
+    "tailwind-merge": "^3.0.2",
+    "tailwind-variants": "^1.0.0",
     "tailwindcss": "3.4.17",
+    "tailwindcss-animate": "^1.0.7",
     "tslib": "^2.8.1",
     "typescript": "^5.8.2",
     "vite": "^6.2.0",
