feat: add map-based location picker to form

--- a/.env.dist
+++ b/.env.dist
@@ -6,6 +6,7 @@ PUBLIC_TEAM_NAME=Skylarks
 PUBLIC_AUTH_FUNCS_ENABLED="true"
 PUBLIC_LOG_LEVEL=ERROR
 PUBLIC_APPLICATION_CONTEXT="Development"
+PUBLIC_TILE_SERVER="tile.openstreetmap.de"
 
 BSM_API_KEY=KEY
 SKYLARKS_API_AUTH_HEADER=HEADER
