--- a/package.json
+++ b/package.json
@@ -13,35 +13,37 @@
     "test:e2e": "playwright test"
   },
   "devDependencies": {
-    "@dotenvx/dotenvx": "^1.38.4",
+    "@dotenvx/dotenvx": "^1.38.5",
     "@playwright/test": "^1.51.0",
     "@skeletonlabs/skeleton": "2.10.4",
     "@skeletonlabs/tw-plugin": "0.4.0",
     "@sveltejs/adapter-node": "^5.2.12",
-    "@sveltejs/kit": "^2.18.0",
+    "@sveltejs/kit": "^2.19.0",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "0.5.16",
     "@tigawanna/typed-pocketbase": "^0.0.5",
+    "@types/leaflet": "^1.9.16",
     "@types/node": "22.10.10",
     "autoprefixer": "10.4.20",
+    "leaflet": "^1.9.4",
     "lucide-svelte": "^0.474.0",
     "postcss": "8.5.1",
-    "svelte": "^5.22.5",
+    "svelte": "^5.23.0",
     "svelte-check": "^4.1.5",
     "tailwind-variants": "^1.0.0",
     "tailwindcss": "3.4.17",
     "tailwindcss-animate": "^1.0.7",
     "tslib": "^2.8.1",
     "typescript": "^5.8.2",
-    "vite": "^6.2.0",
+    "vite": "^6.2.1",
     "vite-plugin-tailwind-purgecss": "0.3.5",
     "vitest": "^3.0.8"
   },
   "type": "module",
   "dependencies": {
     "@vincjo/datatables": "^1.14.10",
-    "bits-ui": "^1.3.6",
+    "bits-ui": "^1.3.11",
     "bsm.js": "^0.1.12",
     "flatpickr": "^4.6.13",
     "pocketbase": "^0.25.2",
