--- a/package.json
+++ b/package.json
@@ -22,18 +22,18 @@
     "@sveltejs/kit": "^2.20.7",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
     "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/postcss": "^4.1.4",
     "@tailwindcss/typography": "0.5.16",
     "@tigawanna/typed-pocketbase": "^0.0.5",
     "@types/leaflet": "^1.9.17",
     "@types/node": "22.10.10",
-    "autoprefixer": "10.4.20",
     "leaflet": "^1.9.4",
     "lucide-svelte": "^0.474.0",
     "postcss": "8.5.1",
     "svelte": "^5.28.1",
     "svelte-check": "^4.1.6",
     "tailwind-variants": "^1.0.0",
-    "tailwindcss": "3.4.17",
+    "tailwindcss": "4.1.4",
     "tailwindcss-animate": "^1.0.7",
     "tslib": "^2.8.1",
     "typescript": "^5.8.3",
