--- a/package.json
+++ b/package.json
@@ -22,14 +22,13 @@
     "@sveltejs/kit": "^2.20.7",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
     "@tailwindcss/forms": "^0.5.10",
-    "@tailwindcss/postcss": "^4.1.4",
     "@tailwindcss/typography": "0.5.16",
+    "@tailwindcss/vite": "^4.1.4",
     "@tigawanna/typed-pocketbase": "^0.0.5",
     "@types/leaflet": "^1.9.17",
     "@types/node": "22.10.10",
     "leaflet": "^1.9.4",
     "lucide-svelte": "^0.474.0",
-    "postcss": "8.5.1",
     "svelte": "^5.28.1",
     "svelte-check": "^4.1.6",
     "tailwind-variants": "^1.0.0",
