--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "svelte-check": "^4.1.6",
     "tailwind-variants": "^1.0.0",
     "tailwindcss": "4.1.4",
-    "tailwindcss-animate": "^1.0.7",
     "tslib": "^2.8.1",
+    "tw-animate-css": "^1.2.8",
     "typescript": "^5.8.3",
     "vite": "^6.3.2",
     "vitest": "^3.1.2"
