feat: add application context indicator

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,7 @@ services:
       - "SKYLARKS_API_AUTH_HEADER=${SKYLARKS_API_AUTH_HEADER}"
       - "PUBLIC_LOG_LEVEL=${PUBLIC_LOG_LEVEL}"
       - "PUBLIC_TILE_SERVER=${PUBLIC_TILE_SERVER}"
+      - "PUBLIC_APPLICATION_CONTEXT=${PUBLIC_APPLICATION_CONTEXT}"
 
 networks:
   proxy:
