--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@dotenvx/dotenvx": "^1.44.0",
     "@playwright/test": "^1.52.0",
     "@skeletonlabs/skeleton": "^3.1.3",
-    "@skeletonlabs/skeleton-svelte": "^1.2.1",
+    "@skeletonlabs/skeleton-svelte": "^1.2.2",
     "@sveltejs/adapter-node": "^5.2.12",
     "@sveltejs/kit": "^2.21.0",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
@@ -34,7 +34,7 @@
     "tailwind-variants": "^1.0.0",
     "tailwindcss": "4.1.4",
     "tslib": "^2.8.1",
-    "tw-animate-css": "^1.2.9",
+    "tw-animate-css": "^1.3.0",
     "typescript": "^5.8.3",
     "vite": "^6.3.5",
     "vitest": "^3.1.3"
@@ -55,6 +55,7 @@
   },
   "pnpm": {
     "onlyBuiltDependencies": [
+      "@tailwindcss/oxide",
       "esbuild"
     ]
   }
