--- a/.github/workflows/deploy_production.yaml
+++ b/.github/workflows/deploy_production.yaml
@@ -14,6 +14,7 @@ jobs:
     uses: ./.github/workflows/deploy-template.yaml
     with:
       environment: Production
+      branch: 'main'
     secrets:
       DOCKER_TOKEN: ${{ secrets.DOCKER_TOKEN }}
       PORTAINER_WEBHOOK_URL: ${{ secrets.PORTAINER_WEBHOOK_URL }}
