--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "generate:types": "typed-pocketbase -d src/lib/model",
     "test:e2e": "playwright test",
+    "test:ui": "playwright test --ui",
     "test:unit": "vitest"
   },
   "devDependencies": {
