--- a/docker-compose-common.yml
+++ b/docker-compose-common.yml
@@ -6,6 +6,7 @@ services:
       BSM_API_URL: ${BSM_API_URL}
       BSM_API_HOST: ${BSM_API_HOST}
       APPLICATION_CONTEXT: ${APPLICATION_CONTEXT}
+      TIME_ZONE: ${TIME_ZONE}
     networks:
       - proxy
     volumes:
