fix: tighten up API rules and extend auth token

--- a/.github/workflows/deploy_staging_workflow.yml
+++ b/.github/workflows/deploy_staging_workflow.yml
@@ -5,6 +5,8 @@ on:
     paths-ignore:
       - '**/README.md'
       - 'docs/**'
+      - 'backend/pb_schema.json'
+      - 'craft/**'
     branches:
       - stage
   workflow_dispatch:
