--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@tigawanna/typed-pocketbase": "^0.0.5",
     "@types/leaflet": "^1.9.18",
     "@types/node": "22.10.10",
+    "bits-ui": "^2.4.0",
     "leaflet": "^1.9.4",
     "lucide-svelte": "^0.474.0",
     "svelte": "^5.33.10",
@@ -38,17 +39,14 @@
     "tw-animate-css": "^1.3.2",
     "typescript": "^5.8.3",
     "vite": "^6.3.5",
-    "vitest": "^3.1.4"
-  },
-  "type": "module",
-  "dependencies": {
     "@vincjo/datatables": "^1.14.10",
-    "bits-ui": "^1.8.0",
+    "vitest": "^3.1.4",
     "bsm.js": "^0.1.12",
     "flatpickr": "^4.6.13",
     "pocketbase": "^0.25.2",
     "svelte-persisted-store": "^0.12.0"
   },
+  "type": "module",
   "overrides": {
     "typed-pocketbase": {
       "pocketbase": "$pocketbase"
