feat: add migration config, collection snapshot and first app settings migration

--- a/backend/.env.dist
+++ b/backend/.env.dist
@@ -1,4 +1,5 @@
 SKYLARKS_API_AUTH_HEADER="HEADER"
+PUBLIC_POCKETBASE_URL="http://127.0.0.1:8090"
 BSM_API_URL="https://bsm.baseball-softball.de"
 BSM_API_HOST="bsm.baseball-softball.de"
 APPLICATION_CONTEXT="Development"
