--- a/docker-compose-common.yml
+++ b/docker-compose-common.yml
@@ -7,6 +7,7 @@ services:
       BSM_API_HOST: ${BSM_API_HOST}
       APPLICATION_CONTEXT: ${APPLICATION_CONTEXT}
       TIME_ZONE: ${TIME_ZONE}
+      PUBLIC_POCKETBASE_URL: ${PUBLIC_POCKETBASE_URL}
     networks:
       - proxy
     volumes:
