--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "skylarks-next",
-  "version": "0.9.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "vite dev",
@@ -28,23 +28,23 @@
     "@tigawanna/typed-pocketbase": "^0.0.5",
     "@types/leaflet": "^1.9.18",
     "@types/node": "22.10.10",
-    "bits-ui": "^2.4.0",
+    "@vincjo/datatables": "^1.14.10",
+    "bits-ui": "^2.4.1",
+    "bsm.js": "^0.1.12",
+    "flatpickr": "^4.6.13",
     "leaflet": "^1.9.4",
     "lucide-svelte": "^0.474.0",
-    "svelte": "^5.33.10",
+    "pocketbase": "^0.26.0",
+    "svelte": "^5.33.11",
     "svelte-check": "^4.2.1",
+    "svelte-persisted-store": "^0.12.0",
     "tailwind-variants": "^1.0.0",
     "tailwindcss": "4.1.4",
     "tslib": "^2.8.1",
-    "tw-animate-css": "^1.3.2",
+    "tw-animate-css": "^1.3.3",
     "typescript": "^5.8.3",
     "vite": "^6.3.5",
-    "@vincjo/datatables": "^1.14.10",
-    "vitest": "^3.1.4",
-    "bsm.js": "^0.1.12",
-    "flatpickr": "^4.6.13",
-    "pocketbase": "^0.25.2",
-    "svelte-persisted-store": "^0.12.0"
+    "vitest": "^3.1.4"
   },
   "type": "module",
   "overrides": {
