--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "pocketbase": "^0.26.1",
     "svelte": "^5.33.16",
     "svelte-check": "^4.2.1",
-    "svelte-persisted-store": "^0.12.0",
+    "svelte-persisted-state": "^1.1.0",
     "tailwind-variants": "^1.0.0",
     "tailwindcss": "4.1.4",
     "tslib": "^2.8.1",
