feat: supply default API key to backend

--- a/backend/.env.dist
+++ b/backend/.env.dist
@@ -4,3 +4,4 @@ BSM_API_URL="https://bsm.baseball-softball.de"
 BSM_API_HOST="bsm.baseball-softball.de"
 APPLICATION_CONTEXT="Development"
 TIME_ZONE="Europe/Berlin"
+BSM_API_KEY=
