test: fix e2e tests for DP, use dotenvx for all tests

--- a/.env.dist
+++ b/.env.dist
@@ -21,3 +21,7 @@ APPLE_TEAM_ID=
 APPLE_KEY_ID=
 APPLE_PRIVATE_KEY=
 APPLE_KEY_DURATION=15777000
+
+# Testing
+TEST_USER_NAME=""
+TEST_USER_PASSWORD=""
