feat: add player change webhook handling

--- a/docker-compose-common.yml
+++ b/docker-compose-common.yml
@@ -31,3 +31,5 @@ services:
       - "PUBLIC_LOG_LEVEL=${PUBLIC_LOG_LEVEL}"
       - "PUBLIC_TILE_SERVER=${PUBLIC_TILE_SERVER}"
       - "PUBLIC_APPLICATION_CONTEXT=${PUBLIC_APPLICATION_CONTEXT}"
+      - "PLAYER_CHANGE_WEBHOOK_IDENTIFIER=${PLAYER_CHANGE_WEBHOOK_IDENTIFIER}"
+      - "PLAYER_CHANGE_WEBHOOK_SECRET=${PLAYER_CHANGE_WEBHOOK_SECRET}"
