--- a/backend/.env.dist
+++ b/backend/.env.dist
@@ -4,4 +4,8 @@ BSM_API_URL="https://bsm.baseball-softball.de"
 BSM_API_HOST="bsm.baseball-softball.de"
 APPLICATION_CONTEXT="Development"
 TIME_ZONE="Europe/Berlin"
-BSM_API_KEY=
+BSM_API_KEY=""
+
+# these can be generated in TYPO3 backend
+PLAYER_CHANGE_WEBHOOK_IDENTIFIER=""
+PLAYER_CHANGE_WEBHOOK_SECRET=""
