feat: outgoing player data webhook to CMS

--- a/docker-compose-common.yml
+++ b/docker-compose-common.yml
@@ -33,3 +33,5 @@ services:
       - "PUBLIC_APPLICATION_CONTEXT=${PUBLIC_APPLICATION_CONTEXT}"
       - "PLAYER_CHANGE_WEBHOOK_IDENTIFIER=${PLAYER_CHANGE_WEBHOOK_IDENTIFIER}"
       - "PLAYER_CHANGE_WEBHOOK_SECRET=${PLAYER_CHANGE_WEBHOOK_SECRET}"
+      - "PLAYER_UPDATE_REACTION_IDENTIFIER=${PLAYER_UPDATE_REACTION_IDENTIFIER}"
+      - "PLAYER_UPDATE_REACTION_SECRET=${PLAYER_UPDATE_REACTION_SECRET}"
