--- a/backend/.env.dist
+++ b/backend/.env.dist
@@ -2,6 +2,7 @@ SKYLARKS_API_AUTH_HEADER="HEADER"
 PUBLIC_POCKETBASE_URL="http://127.0.0.1:8090"
 BSM_API_URL="https://bsm.baseball-softball.de"
 BSM_API_HOST="bsm.baseball-softball.de"
+PUBLIC_TYPO3_URL="https://skylarks-hp.ddev.site"
 APPLICATION_CONTEXT="Development"
 TIME_ZONE="Europe/Berlin"
 BSM_API_KEY=""
@@ -9,3 +10,5 @@ BSM_API_KEY=""
 # these can be generated in TYPO3 backend
 PLAYER_CHANGE_WEBHOOK_IDENTIFIER=""
 PLAYER_CHANGE_WEBHOOK_SECRET=""
+PLAYER_UPDATE_REACTION_IDENTIFIER=""
+PLAYER_UPDATE_REACTION_SECRET=""
