--- a/docker-compose-common.yml
+++ b/docker-compose-common.yml
@@ -9,6 +9,10 @@ services:
       TIME_ZONE: ${TIME_ZONE}
       PUBLIC_POCKETBASE_URL: ${PUBLIC_POCKETBASE_URL}
       BSM_API_KEY: ${BSM_API_KEY}
+      PLAYER_CHANGE_WEBHOOK_IDENTIFIER: ${PLAYER_CHANGE_WEBHOOK_IDENTIFIER}
+      PLAYER_CHANGE_WEBHOOK_SECRET: ${PLAYER_CHANGE_WEBHOOK_SECRET}
+      PLAYER_UPDATE_REACTION_IDENTIFIER: ${PLAYER_UPDATE_REACTION_IDENTIFIER}
+      PLAYER_UPDATE_REACTION_SECRET: ${PLAYER_UPDATE_REACTION_SECRET}
     networks:
       - proxy
     volumes:
@@ -18,20 +22,15 @@ services:
     restart: unless-stopped
     networks:
       - proxy
-
     # why no stack.env: https://github.com/portainer/portainer/issues/10902
     environment:
-      - "PUBLIC_TYPO3_URL=${PUBLIC_TYPO3_URL}"
-      - "PUBLIC_POCKETBASE_URL=${PUBLIC_POCKETBASE_URL}"
-      - "PUBLIC_CLUB_ID=${PUBLIC_CLUB_ID}"
-      - "PUBLIC_TEAM_NAME=${PUBLIC_TEAM_NAME}"
-      - "PUBLIC_AUTH_FUNCS_ENABLED=${PUBLIC_AUTH_FUNCS_ENABLED}"
-      - "BSM_API_KEY=${BSM_API_KEY}"
-      - "SKYLARKS_API_AUTH_HEADER=${SKYLARKS_API_AUTH_HEADER}"
-      - "PUBLIC_LOG_LEVEL=${PUBLIC_LOG_LEVEL}"
-      - "PUBLIC_TILE_SERVER=${PUBLIC_TILE_SERVER}"
-      - "PUBLIC_APPLICATION_CONTEXT=${PUBLIC_APPLICATION_CONTEXT}"
-      - "PLAYER_CHANGE_WEBHOOK_IDENTIFIER=${PLAYER_CHANGE_WEBHOOK_IDENTIFIER}"
-      - "PLAYER_CHANGE_WEBHOOK_SECRET=${PLAYER_CHANGE_WEBHOOK_SECRET}"
-      - "PLAYER_UPDATE_REACTION_IDENTIFIER=${PLAYER_UPDATE_REACTION_IDENTIFIER}"
-      - "PLAYER_UPDATE_REACTION_SECRET=${PLAYER_UPDATE_REACTION_SECRET}"
+      PUBLIC_TYPO3_URL: ${PUBLIC_TYPO3_URL}
+      PUBLIC_POCKETBASE_URL: ${PUBLIC_POCKETBASE_URL}
+      PUBLIC_CLUB_ID: ${PUBLIC_CLUB_ID}
+      PUBLIC_TEAM_NAME: ${PUBLIC_TEAM_NAME}
+      PUBLIC_AUTH_FUNCS_ENABLED: ${PUBLIC_AUTH_FUNCS_ENABLED}
+      BSM_API_KEY: ${BSM_API_KEY}
+      SKYLARKS_API_AUTH_HEADER: ${SKYLARKS_API_AUTH_HEADER}
+      PUBLIC_LOG_LEVEL: ${PUBLIC_LOG_LEVEL}
+      PUBLIC_TILE_SERVER: ${PUBLIC_TILE_SERVER}
+      PUBLIC_APPLICATION_CONTEXT: ${PUBLIC_APPLICATION_CONTEXT}
