fix: backend also needs PUBLIC_TYPO3_URL

--- a/docker-compose-common.yml
+++ b/docker-compose-common.yml
@@ -9,6 +9,7 @@ services:
       TIME_ZONE: ${TIME_ZONE}
       PUBLIC_POCKETBASE_URL: ${PUBLIC_POCKETBASE_URL}
       BSM_API_KEY: ${BSM_API_KEY}
+      PUBLIC_TYPO3_URL: ${PUBLIC_TYPO3_URL}
       PLAYER_CHANGE_WEBHOOK_IDENTIFIER: ${PLAYER_CHANGE_WEBHOOK_IDENTIFIER}
       PLAYER_CHANGE_WEBHOOK_SECRET: ${PLAYER_CHANGE_WEBHOOK_SECRET}
       PLAYER_UPDATE_REACTION_IDENTIFIER: ${PLAYER_UPDATE_REACTION_IDENTIFIER}
