--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "dev": "vite dev",
     "build": "vite build",
+    "extract": "dotenvx run -- wuchale",
+    "clean": "dotenvx run -- wuchale --clean",
     "preview": "vite preview",
     "test": "dotenvx run -- vitest && pnpm test:e2e",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
