--- a/package.json
+++ b/package.json
@@ -21,24 +21,24 @@
     "@playwright/test": "^1.55.0",
     "@skeletonlabs/skeleton": "^3.2.0",
     "@skeletonlabs/skeleton-svelte": "^1.5.1",
-    "@sveltejs/adapter-node": "^5.3.1",
-    "@sveltejs/kit": "^2.37.1",
-    "@sveltejs/vite-plugin-svelte": "^5.1.1",
+    "@sveltejs/adapter-node": "^5.3.2",
+    "@sveltejs/kit": "^2.38.1",
+    "@sveltejs/vite-plugin-svelte": "^6.2.0",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
     "@tailwindcss/vite": "^4.1.13",
-    "@tigawanna/typed-pocketbase": "^0.0.5",
+    "@tigawanna/typed-pocketbase": "^0.1.6",
     "@types/leaflet": "^1.9.20",
     "@types/node": "22.10.10",
     "@vincjo/datatables": "^1.14.10",
     "apexcharts": "^4.7.0",
-    "bits-ui": "^2.9.6",
+    "bits-ui": "^2.9.7",
     "bsm.js": "^0.2.0",
     "flatpickr": "^4.6.13",
     "leaflet": "^1.9.4",
-    "lucide-svelte": "^0.474.0",
+    "lucide-svelte": "^0.544.0",
     "pocketbase": "^0.26.2",
-    "svelte": "^5.38.8",
+    "svelte": "^5.38.10",
     "svelte-check": "^4.3.1",
     "svelte-persisted-state": "^1.2.0",
     "tailwind-variants": "^1.0.0",
@@ -47,7 +47,9 @@
     "tw-animate-css": "^1.3.8",
     "typescript": "^5.9.2",
     "vite": "^7.1.5",
-    "vitest": "^3.2.4",
+    "vitest": "^3.2.4"
+  },
+  "dependencies": {
     "@wuchale/svelte": "^0.14.3",
     "@wuchale/vite-plugin": "^0.14.4",
     "wuchale": "^0.15.8"
