feat: add ru, es, pl, fr locales

--- a/.env.dist
+++ b/.env.dist
@@ -25,3 +25,6 @@ APPLE_KEY_DURATION=15777000
 # Testing
 TEST_USER_NAME=""
 TEST_USER_PASSWORD=""
+
+# only used during local development for automatic translation
+#GEMINI_API_KEY=""
