--- a/package.json
+++ b/package.json
@@ -18,41 +18,39 @@
   },
   "devDependencies": {
     "@dotenvx/dotenvx": "^1.51.0",
-    "@playwright/test": "^1.56.0",
+    "@playwright/test": "^1.56.1",
     "@skeletonlabs/skeleton": "^3.2.2",
     "@skeletonlabs/skeleton-svelte": "^1.5.3",
-    "@sveltejs/adapter-node": "^5.3.3",
-    "@sveltejs/kit": "^2.46.4",
+    "@sveltejs/adapter-node": "^5.4.0",
+    "@sveltejs/kit": "^2.47.3",
     "@sveltejs/vite-plugin-svelte": "^6.2.1",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.19",
-    "@tailwindcss/vite": "^4.1.14",
+    "@tailwindcss/vite": "^4.1.16",
     "@tigawanna/typed-pocketbase": "^0.1.6",
-    "@types/leaflet": "^1.9.20",
+    "@types/leaflet": "^1.9.21",
     "@types/node": "22.10.10",
     "@vincjo/datatables": "^1.14.10",
     "apexcharts": "^4.7.0",
-    "bits-ui": "^2.11.5",
+    "bits-ui": "^2.14.1",
     "bsm.js": "^0.2.1",
     "flatpickr": "^4.6.13",
     "leaflet": "^1.9.4",
     "lucide-svelte": "^0.544.0",
     "pocketbase": "^0.26.2",
-    "svelte": "^5.39.11",
+    "svelte": "^5.41.3",
     "svelte-check": "^4.3.3",
     "svelte-persisted-state": "^1.2.0",
     "tailwind-variants": "^1.0.0",
-    "tailwindcss": "^4.1.14",
+    "tailwindcss": "^4.1.16",
     "tslib": "^2.8.1",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.3",
-    "vite": "^7.1.9",
-    "vitest": "^3.2.4"
-  },
-  "dependencies": {
-    "@wuchale/svelte": "^0.15.1",
-    "@wuchale/vite-plugin": "^0.14.7",
-    "wuchale": "^0.16.5"
+    "vite": "^7.1.12",
+    "vitest": "^3.2.4",
+    "@wuchale/svelte": "^0.16.6",
+    "@wuchale/vite-plugin": "^0.14.8",
+    "wuchale": "^0.17.5"
   },
   "type": "module",
   "overrides": {
