--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
 	"devDependencies": {
 		"@dotenvx/dotenvx": "^1.51.0",
 		"@playwright/test": "^1.56.1",
-		"@skeletonlabs/skeleton": "^4.1.4",
 		"@sveltejs/adapter-node": "^5.4.0",
 		"@sveltejs/kit": "^2.47.3",
 		"@sveltejs/vite-plugin-svelte": "^6.2.1",
 		"@tailwindcss/forms": "^0.5.10",
+		"@tailwindcss/postcss": "^4.1.16",
 		"@tailwindcss/typography": "^0.5.19",
 		"@tailwindcss/vite": "^4.1.16",
 		"@tigawanna/typed-pocketbase": "^0.1.6",
@@ -41,6 +41,7 @@
 		"leaflet": "^1.9.4",
 		"lucide-svelte": "^0.544.0",
 		"pocketbase": "^0.26.2",
+		"postcss": "^8.5.6",
 		"prettier": "^3.6.2",
 		"prettier-plugin-svelte": "^3.4.0",
 		"svelte": "^5.41.3",
