feat: add field display_on_website to user model

--- a/biome.json
+++ b/biome.json
@@ -27,7 +27,9 @@
       "!**/yarn.lock",
       "!**/bun.lock",
       "!**/bun.lockb",
-      "!./static/"
+      "!./static/",
+      "!**/pb_schema.json",
+      "!**/pb-types.ts"
     ]
   },
   "linter": {
