--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "2.3.4",
-    "@dotenvx/dotenvx": "^1.51.0",
+    "@dotenvx/dotenvx": "^1.51.1",
     "@playwright/test": "^1.56.1",
     "@sveltejs/adapter-node": "^5.4.0",
     "@sveltejs/kit": "^2.48.4",
@@ -33,18 +33,18 @@
     "@wuchale/svelte": "^0.16.6",
     "@wuchale/vite-plugin": "^0.14.8",
     "apexcharts": "^4.7.0",
-    "bits-ui": "^2.14.1",
-    "bsm.js": "^0.2.1",
+    "bits-ui": "^2.14.2",
+    "bsm.js": "^0.3.0",
     "flatpickr": "^4.6.13",
     "leaflet": "^1.9.4",
     "lucide-svelte": "^0.552.0",
     "pocketbase": "^0.26.3",
-    "svelte": "^5.43.2",
+    "svelte": "^5.43.4",
     "svelte-check": "^4.3.3",
     "svelte-persisted-state": "^1.2.0",
     "tslib": "^2.8.1",
     "typescript": "^5.9.3",
-    "vite": "^7.1.12",
+    "vite": "^7.2.2",
     "vitest": "^3.2.4",
     "wuchale": "^0.17.5"
   },
@@ -55,6 +55,8 @@
     }
   },
   "pnpm": {
-    "onlyBuiltDependencies": ["esbuild"]
+    "onlyBuiltDependencies": [
+      "esbuild"
+    ]
   }
 }
