--- a/.github/workflows/deploy-template.yaml
+++ b/.github/workflows/deploy-template.yaml
@@ -34,11 +34,18 @@ jobs:
           username: ${{ vars.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
 
-      - name: Build and push Docker images
+      - name: Build and push Docker image
         run: |
-          docker build -f backend/Dockerfile -t ${{ vars.DOCKER_PB_IMAGE }} backend
-          docker push ${{ vars.DOCKER_PB_IMAGE }}
-          docker build -t ${{ vars.DOCKER_IMAGE }} .
+          # Build unified image (PocketBase + SPA) and bake PUBLIC_* vars at build time
+          docker build \
+            --build-arg PUBLIC_TYPO3_URL="${{ vars.PUBLIC_TYPO3_URL }}" \
+            --build-arg PUBLIC_POCKETBASE_URL="${{ vars.PUBLIC_POCKETBASE_URL }}" \
+            --build-arg PUBLIC_CLUB_ID="${{ vars.PUBLIC_CLUB_ID }}" \
+            --build-arg PUBLIC_TEAM_NAME="${{ vars.PUBLIC_TEAM_NAME }}" \
+            --build-arg PUBLIC_LOG_LEVEL="${{ vars.PUBLIC_LOG_LEVEL }}" \
+            --build-arg PUBLIC_TILE_SERVER="${{ vars.PUBLIC_TILE_SERVER }}" \
+            --build-arg PUBLIC_APPLICATION_CONTEXT="${{ vars.PUBLIC_APPLICATION_CONTEXT }}" \
+            -t ${{ vars.DOCKER_IMAGE }} .
           docker push ${{ vars.DOCKER_IMAGE }}
 
       - name: Trigger Portainer deployment
