--- a/docker-compose-common.yml
+++ b/docker-compose-common.yml
@@ -1,5 +1,5 @@
 services:
-  backend:
+  diamondplanner:
     restart: unless-stopped
     environment:
       SKYLARKS_API_AUTH_HEADER: ${SKYLARKS_API_AUTH_HEADER}
@@ -7,9 +7,7 @@ services:
       BSM_API_HOST: ${BSM_API_HOST}
       APPLICATION_CONTEXT: ${APPLICATION_CONTEXT}
       TIME_ZONE: ${TIME_ZONE}
-      PUBLIC_POCKETBASE_URL: ${PUBLIC_POCKETBASE_URL}
       BSM_API_KEY: ${BSM_API_KEY}
-      PUBLIC_TYPO3_URL: ${PUBLIC_TYPO3_URL}
       PLAYER_CHANGE_WEBHOOK_IDENTIFIER: ${PLAYER_CHANGE_WEBHOOK_IDENTIFIER}
       PLAYER_CHANGE_WEBHOOK_SECRET: ${PLAYER_CHANGE_WEBHOOK_SECRET}
       PLAYER_UPDATE_REACTION_IDENTIFIER: ${PLAYER_UPDATE_REACTION_IDENTIFIER}
@@ -18,19 +16,3 @@ services:
       - proxy
     volumes:
       - pb_data:/app/pb_data
-
-  frontend:
-    restart: unless-stopped
-    networks:
-      - proxy
-    # why no stack.env: https://github.com/portainer/portainer/issues/10902
-    environment:
-      PUBLIC_TYPO3_URL: ${PUBLIC_TYPO3_URL}
-      PUBLIC_POCKETBASE_URL: ${PUBLIC_POCKETBASE_URL}
-      PUBLIC_CLUB_ID: ${PUBLIC_CLUB_ID}
-      PUBLIC_TEAM_NAME: ${PUBLIC_TEAM_NAME}
-      BSM_API_KEY: ${BSM_API_KEY}
-      SKYLARKS_API_AUTH_HEADER: ${SKYLARKS_API_AUTH_HEADER}
-      PUBLIC_LOG_LEVEL: ${PUBLIC_LOG_LEVEL}
-      PUBLIC_TILE_SERVER: ${PUBLIC_TILE_SERVER}
-      PUBLIC_APPLICATION_CONTEXT: ${PUBLIC_APPLICATION_CONTEXT}
