ci: re-add TYPO3 URL
also needed by Go code

--- a/docker-compose-common.yml
+++ b/docker-compose-common.yml
@@ -5,6 +5,7 @@ services:
       SKYLARKS_API_AUTH_HEADER: ${SKYLARKS_API_AUTH_HEADER}
       BSM_API_URL: ${BSM_API_URL}
       BSM_API_HOST: ${BSM_API_HOST}
+      PUBLIC_TYPO3_URL: ${PUBLIC_TYPO3_URL}
       APPLICATION_CONTEXT: ${APPLICATION_CONTEXT}
       TIME_ZONE: ${TIME_ZONE}
       BSM_API_KEY: ${BSM_API_KEY}
