ci: adjust labels

--- a/docker-compose-staging.yml
+++ b/docker-compose-staging.yml
@@ -6,11 +6,11 @@ services:
     image: obnoxieux/skylarks-diamond-planner:staging
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.skylarks-next-frontend-staging.rule=Host(`staging.app.berlinskylarks.de`)"
-      - "traefik.http.routers.skylarks-next-frontend-staging.entrypoints=websecure"
-      - "traefik.http.routers.skylarks-next-frontend-staging.tls.certresolver=letsEncrypt"
+      - "traefik.http.routers.skylarks-next-staging.rule=Host(`staging.app.berlinskylarks.de`)"
+      - "traefik.http.routers.skylarks-next-staging.entrypoints=websecure"
+      - "traefik.http.routers.skylarks-next-staging.tls.certresolver=letsEncrypt"
       - "traefik.docker.network=proxy"
-      - "traefik.http.middlewares.skylarks-next-frontend-staging.basicauth.users=skylarks:$$2y$$05$$ojFS3Hd7r17zBCKG/O0p4.4nltDVAZB1/fm4lupwJ/ow2.ErfYnKS"
+      - "traefik.http.middlewares.skylarks-next-staging.basicauth.users=skylarks:$$2y$$05$$ojFS3Hd7r17zBCKG/O0p4.4nltDVAZB1/fm4lupwJ/ow2.ErfYnKS"
 
 networks:
   proxy:
