--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "skylarks-next",
+  "name": "skylarks-diamond-planner",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -21,42 +21,38 @@
   },
   "devDependencies": {
     "@biomejs/biome": "2.3.8",
-    "@dotenvx/dotenvx": "^1.51.1",
+    "@dotenvx/dotenvx": "^1.51.2",
     "@playwright/test": "^1.57.0",
     "@sveltejs/adapter-static": "^3.0.10",
-    "@sveltejs/kit": "^2.49.1",
+    "@sveltejs/kit": "^2.49.2",
     "@sveltejs/vite-plugin-svelte": "^6.2.1",
     "@tigawanna/typed-pocketbase": "^0.1.6",
     "@types/leaflet": "^1.9.21",
     "@types/node": "24.10.1",
     "@vincjo/datatables": "^1.14.10",
-    "@wuchale/svelte": "^0.17.6",
-    "@wuchale/vite-plugin": "^0.15.4",
+    "@wuchale/svelte": "^0.17.9",
+    "@wuchale/vite-plugin": "^0.15.7",
     "apexcharts": "^4.7.0",
     "bits-ui": "^2.14.4",
     "bsm.js": "^0.3.0",
+    "diamond-planner-frontend": "workspace:*",
     "flatpickr": "^4.6.13",
     "leaflet": "^1.9.4",
     "lucide-svelte": "^0.556.0",
     "pocketbase": "^0.26.5",
-    "svelte": "^5.45.6",
-    "svelte-check": "^4.3.4",
+    "svelte": "^5.46.1",
+    "svelte-check": "^4.3.5",
     "svelte-persisted-state": "^1.2.0",
     "tslib": "^2.8.1",
     "typescript": "^5.9.3",
-    "vite": "^7.2.6",
+    "vite": "^7.3.0",
     "vitest": "^3.2.4",
-    "wuchale": "^0.18.6"
+    "wuchale": "^0.18.11"
   },
   "type": "module",
   "overrides": {
     "typed-pocketbase": {
       "pocketbase": "$pocketbase"
     }
-  },
-  "pnpm": {
-    "onlyBuiltDependencies": [
-      "esbuild"
-    ]
   }
 }
