ci: ignore standalone ui config files for Docker build

--- a/.dockerignore
+++ b/.dockerignore
@@ -14,3 +14,10 @@ node_modules
 build
 package
 **/.env
+diamond-planner/ui/vite.config.ts
+diamond-planner/ui/vitest.config.ts
+diamond-planner/ui/playwright.config.ts
+diamond-planner/ui/svelte.config.js
+diamond-planner/ui/wuchale.config.js
+diamond-planner/ui/tsconfig.json
+diamond-planner/ui/biome.json
